--- a/.env.example
+++ b/.env.example
@@ -4,14 +4,17 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
+WWWGROUP=1000
+WWWUSER=1000
+
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=host.docker.internal
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=mult
+DB_USERNAME=sail
+DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
