--- a/.env.example
+++ b/.env.example
@@ -27,13 +27,15 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
+MAIL_HOST=mailhog
+MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
+FORWARD_MAILHOG_PORT=1025
+FORWARD_MAILHOG_DASHBOARD_PORT=8025
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
