--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,17 @@
-APP_NAME=Laravel
+APP_NAME=EstoqueTanicy
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://laravel.test
 
 WWWGROUP=1000
 WWWUSER=1000
 
-LOG_CHANNEL=stack
+APP_LOCALE=pt_BR
+APP_FALLBACK_LOCALE=en
+APP_FAKER_LOCALE=pt_BR
+
+LOG_CHANNEL=daily
 
 DB_CONNECTION=mysql
 DB_HOST=host.docker.internal
@@ -15,6 +19,8 @@ DB_PORT=3306
 DB_DATABASE=mult
 DB_USERNAME=sail
 DB_PASSWORD=password
+FORWARD_DB_PORT=3306
+MARIADB_VERSION=10.11.5
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
