--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,6 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5|^8.0",
-        "barryvdh/laravel-debugbar": "^3.7",
         "dompdf/dompdf": "^3.0",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
@@ -21,10 +20,12 @@
         "laravel/ui": "^2.1",
         "livewire/livewire": "v2.12",
         "maatwebsite/excel": "^3.1",
+        "nfephp-org/sped-nfe": "^5.0",
         "spatie/laravel-medialibrary": "^7.19",
         "yajra/laravel-datatables-oracle": "^9.10"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.7",
         "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
